# tfrev

./: .gitattributes  .gitignore  .tfrev.yaml.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ci/github-action/: action.yml  example-workflow.yml
ci/gitlab/: .gitlab-ci-template.yml
ci/jenkins/: Jenkinsfile
examples/local-test/: Jenkinsfile  changes.diff  main.tf  variables.tf
src/tfrev/: __init__.py  __main__.py  cli.py  client.py  config.py  diff_parser.py  output.py  plan_parser.py  prompt.py  response_parser.py  tf_discovery.py
src/tfrev/templates/: system_prompt.txt  user_prompt.txt
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_diff_parser.py  test_output.py  test_plan_parser.py  test_prompt.py  test_response_parser.py  test_tf_discovery.py
tests/fixtures/: config_full.yaml  diff_multifile.diff  diff_simple.diff  plan_complex.json  plan_empty.json  plan_minimal.json  plan_sensitive.json  response_fail.json  response_fenced.txt  response_malformed.txt  response_medium_only.json  response_pass.json
