[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfrev"
version = "2.0.0"
description = "AI-powered Terraform plan reviewer — verify your plan matches your intent before apply"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Bishal Paudel", email = "vishal.paudel11111@gmail.com"}
]
keywords = ["terraform", "infrastructure", "review", "ai", "claude", "devops", "iac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
tfrev = "tfrev.cli:main"

[project.urls]
Homepage = "https://github.com/bishalOps/tfrev"
Documentation = "https://github.com/bishalOps/tfrev#readme"
Repository = "https://github.com/bishalOps/tfrev"
Issues = "https://github.com/bishalOps/tfrev/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tfrev = ["templates/*.txt", "py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
